# unipdroidians-navigation

./: .gitignore  LICENSE  README.md  frames_2026-05-17_23.03.53.gv  frames_2026-05-24_15.06.25.gv
Arduino/: kpkiteste.ino
Arduino/odometry_new/: odometry_new.ino
Arduino/odometry_new2/odometry_new/odometry_new/: odometry_new.ino
Arduino/odometrypulse/: odometrypulse.ino
install/: local_setup.sh  setup.sh  spawn_shell.bash
install/my_robot_bringup/lib/my_robot_bringup/: base_driver  base_driver_pulse
install/my_robot_bringup/share/my_robot_bringup/: package.dsv  package.ps1  package.sh  package.xml
install/serial_com_py/lib/serial_com_py/: base_driver  base_driver_pulse  distance_watchdog
log/: latest_build
mapas/: pgm_to_world.py  pgm_to_world_v2.py  udh1_mapa.pgm  udh1_mapa.world  udh1_mapa.yaml
src/my_robot_bringup/: setup.py
src/my_robot_bringup/launch/: gazebo.launch.py  navigation.launch.py  robot_teleop.launch.py  robot_teleop_sim.launch.py
src/serial_com_py/: setup.py
src/serial_com_py/config/: watchdog_params.yaml
src/serial_com_py/serial_com_py/: base_driver.py  base_driver_sim.py  distance_watchdog.py  safe_stop.py
src/udh1_description/: CMakeLists.txt
src/udh1_description/urdf/: udh1.gazebo.xacro  udh1.urdf  udh1.urdf.xacro
src/udh1_gazebo/: CMakeLists.txt  package.xml
src/udh1_gazebo/launch/: gazebo.launch.py  gazebo_nav2.launch.py
src/udh1_gazebo/rviz/: udh1_gazebo.rviz
src/udh1_gazebo/worlds/: udh1_world.world
src/udh1_mapping/config/: nav2_params.yaml  nav2_params_sim.yaml
worlds/: TesteAutoNav1  w1
(+111 files in other folders)
